--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
         <li>And more.</li>
       </ul>
 
+      <a name="demos"></a>
+      <h3>Demos</h3>
+      <ul>
+        <li><a href="./demo/basic/index.html">Basic use</a></li>
+        <li><a href="./demo/basic-htmlconfig/index.html">Basic configuration with HTML attributes</a></li>
+        <li><a href="./demo/normal/index.html">Normal example</a> (with a more real use)</li>
+        <li><a href="./demo/lang/index.html">Installing a language</a></li>
+        <li><a href="./demo/lang-new/index.html">Creating a language</a></li>
+        <li><a href="./demo/intern/index.html">Only functionality</a> (intern)</li>
+        <li><a href="./demo/custom-fields/index.html">Custom fields</a></li>
+        <li><a href="./demo/conditions/index.html">Conditions</a></li>
+        <li><a href="./demo/fieldsets/index.html">Fieldsets</a></li>
+        <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/server" target="_blank">Server</a> (Only code)</li>
+        <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/complete" target="_blank">Complete demo</a> (Only code)</li>
+      </ul>
+
       <a name="example"></a>
       <h3>Example</h3>
 
@@ -152,61 +168,50 @@ if (invalid) {
   // we are free to go :)
 }</code></pre>
 
-      <a name="demos"></a>
-      <h3>Demos</h3>
-      <ul>
-        <li><a href="./demo/basic/index.html">Basic use</a></li>
-        <li><a href="./demo/basic-htmlconfig/index.html">Basic configuration with HTML attributes</a></li>
-        <li><a href="./demo/normal/index.html">Normal example</a> (with a more real use)</li>
-        <li><a href="./demo/lang/index.html">Installing a language</a></li>
-        <li><a href="./demo/lang-new/index.html">Creating a language</a></li>
-        <li><a href="./demo/intern/index.html">Only functionality</a> (intern)</li>
-        <li><a href="./demo/custom-fields/index.html">Custom fields</a></li>
-        <li><a href="./demo/conditions/index.html">Conditions</a></li>
-        <li><a href="./demo/fieldsets/index.html">Fieldsets</a></li>
-        <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/server" target="_blank">Server</a> (Only code)</li>
-        <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/complete" target="_blank">Complete demo</a> (Only code)</li>
-      </ul>
-
       <a name="install"></a>
       <h3>Install</h3>
 
       <h4>JavaScript</h4>
       <p>To install with <a href="http://npmjs.com">NPM</a>:</p>
-      <pre><code class="language-bash">npm install --save vulcanval</code></pre>
+      <pre><code class="language-bash">$ npm install --save vulcanval</code></pre>
       <p>To use in <a href="http://nodejs.org">Node</a>:</p>
       <pre><code class="language-js">const vulcanval = require('vulcanval');</code></pre>
       <p>To use with <a href="http://browserify.org">Browserify</a> or <a href="https://webpack.github.io">Webpack</a>:</p>
-<pre><code class="language-js">const vulcanval = require('vulcanval');
-const vulcanvalJQuery = require('vulcanval/src/js/jquery');
+<pre><code class="language-js">// The validator module:
+const vulcanval = require('vulcanval');
 // or
 import vulcanval from 'vulcanval';
-import vulcanvalJQuery from 'vulcanval/src/js/jquery';</code></pre>
-      <p>Make sure you have an ES2015 compiler as <a href="https://babeljs.io/">Babel</a> configured.</p>
-      <p>VulcanVal has a dependency on <a href="https://www.npmjs.com/package/validator" target="_blank">validator.js</a>
+
+// And if you want to use the jQuery plugin:
+const vulcanvalJQuery = require('vulcanval/bundle/js/jquery');
+// or
+import vulcanvalJQuery from 'vulcanval/bundle/js/jquery';</code></pre>
+      <p>VulcanVal has a peer dependency on <a href="https://www.npmjs.com/package/validator" target="_blank">validator.js</a>
          and in client-side the plugin requires <a href="http://jquery.com" target="_blank">jQuery</a> so make sure
          you install them first.</p>
-      <pre><code class="language-bash">npm install --save validator jquery</code></pre>
+      <pre><code class="language-bash">$ npm install --save validator jquery</code></pre>
 
       <h4>CSS</h4>
-      <p>To install the styles with <a href="http://sass-lang.com">SASS</a>, include in import paths:</p>
+      <p>To install the styles for the jQuery plugin with <a href="http://sass-lang.com">SASS</a>, include the following import path in the SASS compiler:</p>
       <pre><code class="language-none">./node_modules/vulcanval/src/scss/jquery</code></pre>
       <p>And import in your SASS code:</p>
       <pre><code class="language-css">@import &#39;vulcanval-jquery&#39;;</code></pre>
 
       <h4>Built files</h4>
-      <p>You can download the browser built files version 2.x from:</p>
+      <p>You can download the browser built files version 3.x from:</p>
       <ul>
         <li><a href="https://raw.githubusercontent.com/vulcan-estudios/vulcanval/master/dist/vulcanval.min.js" download>vulcanval.min.js</a></li>
         <li><a href="https://raw.githubusercontent.com/vulcan-estudios/vulcanval/master/dist/vulcanval-jquery.min.js" download>vulcanval-jquery.min.js</a></li>
         <li><a href="https://raw.githubusercontent.com/vulcan-estudios/vulcanval/master/dist/vulcanval-jquery.min.css" download>vulcanval-jquery.min.css</a></li>
       </ul>
+      <p>And install them directly on your site before using the package and the plugin.</p>
 
       <a name="additionals"></a>
       <h3>Additionals</h3>
       <ul>
         <li>You can add certain support to browser input autofill with this package <a href="https://github.com/tbosch/autofill-event" target="_blank">github.com/tbosch/autofill-event</a>.</li>
         <li>VulcanVal does not support inputs type file, an alternative is <a href="https://github.com/vulcan-estudios/vulcanup" target="_blank">VulcanUp</a>.</li>
+        <p>The plugin does not require jQuery from code, it uses the global namespace.</p>
       </ul>
 
       <a name="thanks"></a>
