--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -55,9 +55,13 @@
     </vv-main>
     <vv-footer></vv-footer>
 
-    <script src="../../lib/jquery-3.0.0.min.js"></script>
+    <!-- TODO: -->
+    <!--script src="../../lib/jquery-3.1.0.min.js"></script-->
     <script src="../../dist/vulcanval.js"></script>
+    <script>
+      console.log(window.vulcanval);
+    </script>
     <script src="../../dist/vulcanval-jquery.js"></script>
-    <script src="./scripts.js"></script>
+    <!--script src="./scripts.js"></script-->
   </body>
 </html>
